<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/would_you_like_to_delete_this_alarm"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cancel3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/cancel"
            android:textColor="#3F51B5" />

        <Button
            android:id="@+id/delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>