<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/status"
        android:textSize="30sp"
        android:layout_marginTop="200dp"
        android:text="@string/nul"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/connected_text"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:text="@string/nul"
        app:layout_constraintTop_toBottomOf="@id/status"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:background="@drawable/button_background_selector"
        android:textColor="@color/colorWhite"
        android:text="@string/scan"
        android:id="@+id/scan_button"
        app:layout_constraintBottom_toTopOf="@id/active_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:background="@drawable/button_background_selector"
        android:textColor="@color/colorWhite"
        android:text="@string/active"
        android:id="@+id/active_button"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>